# Knapsack-Problem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.bat  test.sh
include/: knapsack.h  utils.h
res/: chart.drawio
src/: bb.cpp  bt.cpp  dp.cpp  dp_tuple.cpp  knapsack.cpp  knapsack.h
test/: test.bat
